--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -4,7 +4,7 @@ block contenido
         h1 Bienes Raices
         h2=pagina
         .form-contianer 
-            form 
+            form(method="POST" action="/usuarios/registro")
                 div
                     label(for="name") Nombre:
                     input#name.user-input(placeholder="Ingrese su nombre" type="text" name="name")
@@ -15,8 +15,8 @@ block contenido
                     label(for="password") Password:
                     input#password.user-input(placeholder="Ingrese su password" type="password" name="password")
                 div
-                    label(for="rep-password") Repetir password:
-                    input#rep-password.user-input(placeholder="Confirme su password" type="rep-password" name="rep-password")
+                    label(for="repassword") Repetir password:
+                    input#repassword.user-input(placeholder="Confirme su password" type="repassword" name="repassword")
                 div
                     a(href="/usuarios/login") Iniciar sesión
                 
